<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#009688"
    tools:context="com.example.calendar.EventForm">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="bottom|center_horizontal"
            android:hint="@string/enterTitle"
            android:textSize="25sp" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">

            <EditText
                android:id="@+id/in_date"
                android:layout_width="226dp"
                android:layout_height="85dp"
                android:gravity="bottom|center_horizontal"
                android:hint="Date"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:text="SELECT DATE" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/in_time"
                android:layout_width="226dp"
                android:layout_height="85dp"
                android:gravity="bottom|center_horizontal"
                android:hint="Time"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:text="SELECT TIME" />
        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="355dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"></Button>

        <Button
            android:id="@+id/eventListButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventList"></Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>